// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for inline tags and given sha256 it should inject a sha256+base64 source for each 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'sha256-YjZlMjI0ZjE0MzBjZTU1MmJhMGU3ZjA5OWY3NzhmNGE4OTY4ZGQ4YjMzM2UyZjg5Nzg5YWRkY2ViM2FjODZjYw==' 'sha256-YWE3MTY0NGRjYmE4MDI5ZWE4M2I1NDU5MjcyZTlhMzdmZjY4ZGUyNmE3YjAwMzA5NGIxZDE5MmVhNmU0ZmM5Ng=='; style-src 'sha256-OWNjNzc1MTdmMmNjMmIzNmM0OWJjOTk2NmRjNGNkMGJhMjFmNmFiZDZjYmFkMDBjMjQ5ZDZlYWExYmM5ZmRjZg==' 'sha256-ODQ0MDEzNWZiYjE0NjY4OTU3ZjQ3NDE4NjkwZmFjNDkxNmU0OWYzNTkxOWQ2ZjMyZWQ5M2RkMTY1NmRhNjFkZA=='"
    >
    <title>
      Fake Title
    </title>
    <script>
      const a=1;
    </script>
    <style>
      div {
        css: sucks;
      }
    </style>
  </head>
  <body>
    <script>
      const b=1;
    </script>
    <style>
      div {
        css: is-bad;
      }
    </style>
  </body>
</html>
`;

exports[`for inline tags and given sha384 it should inject a sha384+base64 source for each 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'sha384-Yjk5NGZlNWVkMWJiNDZlMjZkN2E5ODY5M2FkYmJhYWM5MWQ2MzI4ZTIzOTAzNWVhMTdiY2U5MmE1OTQxMDY3MDQyNTAzMTg0MGI1MTAwN2Q0YzVhZjY2MTNiNzFkNzFi' 'sha384-YzU1YjgyZjdmNjZjNzQyYTBjOThlOWM1NzBkZTc2ZDM5YTE5MGM4YTkxNmNlNzdiNmRjYThkYmZiYzcyMmFjYWZiYmUwODM1ODIxZGNjMDFjZjBjN2ExMjViMjQ2MDQ4'; style-src 'sha384-OWNmMzcwOGE3OGYyNmYwOTM0ZmMzY2IwZDY0ZGRiMGRhNmU1ZTFiOTQxOWQwZGJiNmVmZWJiNDUyYzkzYWEwNGU1YzdlMTM4MzRhZGNkZGU0NWE2MmUzMzVhNmY0ZjRh' 'sha384-ZDhkYjljMzNiN2Q3MGQ1ZGFjMzZlMTIwOTZiOTQ4YTZmNDk4ZTlhZGNjZGIwMzRlY2VlYzNiNDIzODNiZjg5ZGUxMzc5MmYwZjA5MWI3NDkyMmVjNDkxYzJhNThiZWJl'"
    >
    <title>
      Fake Title
    </title>
    <script>
      const a=1;
    </script>
    <style>
      div {
        css: sucks;
      }
    </style>
  </head>
  <body>
    <script>
      const b=1;
    </script>
    <style>
      div {
        css: is-bad;
      }
    </style>
  </body>
</html>
`;

exports[`for inline tags and given sha512 it should inject a sha512+base64 source for each 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="script-src 'sha512-ZmY5ZTdjNzk4MmM3MmE3ZjE4Mjk2OTI3MmU4MTc5NDZmNDMwMTBlNmY0ZTdmYTU0ZTI5MTUyY2VmMzdmZDA1NWI5YmNmNGE1MWQ4MjBiNTIyYjMxNzY2ZmMyZTUyYjM1YzkwYzAzZjM0MGNjNjk4MDEyNDYxODRhZWM5N2MwYWY=' 'sha512-ZDgzMjA1MTFlYTYxNDhhYzMxYWM4MzcwN2FjZmM3ZjVhMmRhN2Q2YWI5MTlmMzk5YjQ0NjU0NTRmZjYwMjQzZTZhNDhiODlhY2YyOTAyYWE5NWVlZDFjMjE3Zjk5ODY4OTQxZTcxMDFmNGY4YzI3N2MwODYyNTZjMDZlY2JlMmU='; style-src 'sha512-OTY2MDg1NzE5Yzc5ODI0NDY0NTAxZDdjOGEwNmMyOGExNTg4ZmYzOTRhNDJjZDI5NmU3ZTgxMTI2YjU2NDMzZDM1YTQyNjAwZmRhOWVlYmQ0YWNmNDliMzE3ODkwYjZhMDRiOTIwZWZmNzJlYjBhOWNiZjU1NTFkMmIwMjcyODc=' 'sha512-NTNiNDg0YjhhYWFkMzFkODAxMjg2OGVjMGFlZWQyODRjNGU2Mzg4M2YyOTM4MDQ3ZjRiZmNiZGQ2MWQyOTQyOTg5YzFjYTUzMDc2MDcxMmNkZTRlZWY2YjZjODJkMWVlYmU2YTIwOTVmZjMyNDhkOThkYjlhMWJiODlhYmQ4ODg='"
    >
    <title>
      Fake Title
    </title>
    <script>
      const a=1;
    </script>
    <style>
      div {
        css: sucks;
      }
    </style>
  </head>
  <body>
    <script>
      const b=1;
    </script>
    <style>
      div {
        css: is-bad;
      }
    </style>
  </body>
</html>
`;

exports[`for inline tags given inline scripts, styles and additional policies should merge content hashes, and apply policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="style-src https://policy-foo-style.com 'sha256-OWNjNzc1MTdmMmNjMmIzNmM0OWJjOTk2NmRjNGNkMGJhMjFmNmFiZDZjYmFkMDBjMjQ5ZDZlYWExYmM5ZmRjZg==' 'sha256-ODQ0MDEzNWZiYjE0NjY4OTU3ZjQ3NDE4NjkwZmFjNDkxNmU0OWYzNTkxOWQ2ZjMyZWQ5M2RkMTY1NmRhNjFkZA=='; script-src https://policy-foo-script.com 'sha256-YjZlMjI0ZjE0MzBjZTU1MmJhMGU3ZjA5OWY3NzhmNGE4OTY4ZGQ4YjMzM2UyZjg5Nzg5YWRkY2ViM2FjODZjYw==' 'sha256-YWE3MTY0NGRjYmE4MDI5ZWE4M2I1NDU5MjcyZTlhMzdmZjY4ZGUyNmE3YjAwMzA5NGIxZDE5MmVhNmU0ZmM5Ng=='; default-src https://policy-foo-default.com"
    >
    <title>
      Fake Title
    </title>
    <script>
      const a=1;
    </script>
    <style>
      div {
        css: sucks;
      }
    </style>
  </head>
  <body>
    <script>
      const b=1;
    </script>
    <style>
      div {
        css: is-bad;
      }
    </style>
  </body>
</html>
`;

exports[`for inline tags when disabled should not generate hashes (but still apply other policies) 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="style-src https://policy-foo-style.com; script-src https://policy-foo-script.com; default-src https://policy-foo-default.com"
    >
    <title>
      Fake Title
    </title>
    <script>
      const a=1;
    </script>
    <style>
      div {
        css: sucks;
      }
    </style>
  </head>
  <body>
    <script>
      const b=1;
    </script>
    <style>
      div {
        css: is-bad;
      }
    </style>
  </body>
</html>
`;

exports[`given frontmatter mode=[default] (merge) should merge the frontmatter and return the markup 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://config-foo-default.com https://frontmatter-foo-default.com; img-src https://config-foo-img.com https://frontmatter-foo-img.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given frontmatter mode=merge should merge the frontmatter and return the markup 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://config-foo-default.com https://frontmatter-foo-default.com; img-src https://config-foo-img.com https://frontmatter-foo-img.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given frontmatter mode=replace should replace the config with the frontmatter and return the markup 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-foo-default.com; img-src https://frontmatter-foo-img.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given valid args should apply only the corresponding polices for that path (foo/index.html 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://config-foo-default.com https://frontmatter-foo-default.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given valid args should return the markup with CSP applied 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src 'self' https://foo.com; img-src https://bar.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;
